added rudimentary support for introspection

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ DBUS - A D-BUS client library for Common Lisp
 Prerequisites:
   Alexandria
   Babel
+  CL-XmlSpam
   Flexi-Streams
   IOLib
   Ironclad
